--- a/src/assets/css/pseudo.css
+++ b/src/assets/css/pseudo.css
@@ -1,3 +1,93 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+.photo{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: block;
+}
+
+.photo img.portrait-frame {
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    object-fit: cover;
+    filter: grayscale(100%) contrast(120%);
+    box-shadow: 10px 15px 25px 0 rgba(0,0,0,.2);
+    display: block;
+    transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+    margin-top: -10px;
+}
+
+.photo:hover img.portrait-frame {
+    box-shadow: 1px 1px 10px 0 rgba(0,0,0,.1);
+}
+
+.photo .glow-wrap {
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    margin-top: -10px;
+}
+
+.photo .glow {
+    display: block;
+    position:absolute;
+    width: 40%;
+    height: 200%;
+    background: rgba(255,255,255,.2);
+    top: 0;
+    filter: blur(5px);
+    transform: rotate(45deg) translate(-450%, 0);
+    transition: all .5s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.img.portrait-frame:hover .glow{
+    transform: rotate(45deg) translate(450%, 0);
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.img.portrait-frame:hover img.portrait-frame,
+.img.portrait-frame:hover .glow-wrap{
+    margin-top: 0;
+}
+
+h1.portrait-frame {
+    position: absolute;
+    z-index: 1;
+    transform: translate(-25%, -65%);
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    line-height: 1.2;
+}
+
+#author{
+    font-family: Helvetica, Arial;
+    text-transform: uppercase;
+    font-size: 14px;
+    text-decoration: none;
+    position: fixed;
+    bottom: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #888;
+}
+
+#author:hover{
+    color: #111;
+}
+
+.transition-section {
+    clip-path: polygon(50% 99%,0 0,100% 0);
+    background-color: #222;
+    z-index: -1;
+    position: absolute;
+    opacity: 0.5;
+}
+
 .pseudo-body ::before,
 .pseudo-body ::after {
   box-sizing: border-box;
@@ -8,11 +98,11 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  width: 100vw;
+  width: 98%;
   height: 100vh;
   color: #000;
   background-color: var(--bg-color);
-  font-family: 'Maitree', serif;
+  font-family: 'Montserrat', serif;
   font-size: 2.5em;
   font-weight: normal;
   margin-right: 20% !important;
@@ -21,8 +111,8 @@
 .pseudo-span {
     font-family: 'Maitree', serif;
     color:whitesmoke;
-    /*align-items: center;
-    text-shadow: 6px 6px 0px rgba(20, 1, 1, 0.616);*/
+    align-items: center;
+    /*text-shadow: 6px 6px 0px rgba(20, 1, 1, 0.616);*/
 }
 
 .home-title .pseudo-span{
