--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -5,7 +5,7 @@
     margin-bottom:10%;
     margin-top: -25%;
     text-transform: uppercase;
-    color: #29b6f6;
+    color: #FF5722;
     align-content: center !important;
     
     @media (min-width: 350px) {
@@ -22,7 +22,7 @@
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
-    animation: reveal 1500ms ease-in backwards 1500ms, glow 3000ms linear infinite 3000ms;
+    animation: reveal 1500ms ease-in backwards 1500ms, glow 5000ms linear infinite 3000ms;
     position: relative;
   
     @keyframes reveal {
@@ -35,165 +35,134 @@
     }
     @keyframes glow {
       40% {
-        text-shadow: 0 0 2px #4aa84c;
+        text-shadow: 0 0 1px #FFAB40;
       }
     }
 }  
+
+.heading-frame {
+    display: grid;
+	place-items: center;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.4);
+	grid-template-columns: max-content auto;
+	grid-template-rows: auto max-content;
+	background: #333 url('.././images/hnet.com-image.ico') center;
+	background-size: cover;
+	color: white;
+    width: 300px;
+	height: 250px;
+	padding: 2rem;
+	&:before,
+	&:after {
+		content: "";
+		display: block;
+		width: 100%;
+		height: 100%;
+		border: 1px solid white;
+	}
+	&:before {
+		grid-row: 1 / 2;
+		border-right: none;
+		border-bottom: none;
+	}	
+	&:after {
+		grid-row: 1 / span 2;
+		border-left: none;
+	}
+	h2 {
+		margin: 1rem 1rem -.5rem 0;
+		font-family: 'Pragati Narrow', sans-serif;
+		font-size: 2rem;
+		max-width: 100%;
+	}
+}
   
 .animation-box {
-    width: 75%;
-    height: 27.5rem;
-    background-color: blue;
-    margin: 0 auto;
+    width: 100%;
+    height: 30rem;
     overflow: hidden;
     position: relative;
+    margin-left: 10%;
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+    letter-spacing: 5px;
 }
 
+.top-fade-out {
+    font-size: 2.4rem;
+    position: absolute;
+    left: 12.5rem;
+    top: 5rem;
+    opacity: 1;
+    animation-name: topFadeOut;
+    animation-duration: 2s;
+    color: white;
+}
+
+.right-fade-in {
+    font-size: 1.6rem;
+    position: absolute;
+    right: 10rem;
+    top: 9rem;
+    animation-name: rightFadeInOut;
+    animation-delay: 0s;
+    animation-duration: 3s;
+    color: white;
+}
+
+.left-fade-in {
+    font-size: 1.6rem;
+    position: absolute;
+    left: 17.5rem;
+    top: 13rem;
+    animation-name: leftFadeInOut;
+    animation-delay: 0s;
+    animation-duration: 3s;
+    color: white;
+}
 
 @keyframes topFadeOut {
     0% {
         position: absolute;
-        top: -3rem;
+        top: -5rem;
         opacity: 0;
     }
-
-    75% {
-        position: absolute;
+    50% {
         top: 25%;
-        opacity: 1;
+        opacity: 0.50;
     }
-
     100% {
-        opacity: 0;
-    }
-}
-
-@keyframes bottomFadeOut {
-    0% {
-        position: absolute;
-        bottom: -5rem;
-        opacity: 0;
-    }
-
-    75% {
-        position: absolute;
-        bottom: 25%;
         opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-    }
-
-}
-
-@keyframes topFadeOutVertical {
-    0% {
-        position: absolute;
-        top: -3rem;
-        opacity: 0;
-    }
-
-    75% {
-        position: absolute;
-        top: 45%;
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
     }
 }
 
 @keyframes rightFadeInOut {
     0% {
         position: absolute;
-        right: -3rem;
+        right: -10rem;
         opacity: 0;
     }
-
     75% {
         position: absolute;
-        right: 10rem;
-        opacity: 1;
+        opacity: 0.50;
     }
-
     100% {
-        opacity: 0;
-        right: 10rem;
+        opacity: 1;
     }
 }
 
-@keyframes fadeInOut {
+@keyframes leftFadeInOut {
     0% {
+        position: absolute;
+        left: -10rem;
         opacity: 0;
     }
-
-    45% {
+    75% {
+        position: absolute;
+        opacity: 0.50;
+    }
+    100% {
         opacity: 1;
     }
-
-    100% {
-        opacity: 0%;
-    }
-}
-
-.first-text {
-    font-size: 4.4rem;
-    position: absolute;
-    left: 2.5rem;
-    top: 5rem;
-    opacity: 0;
-    animation-name: topFadeOut;
-    animation-duration: 5s;
-    color: white;
-}
-
-.second-text {
-    font-size: 3.4rem;
-    position: absolute;
-    top: 8.5rem;
-    opacity: 0;
-    animation-name: rightFadeInOut;
-    animation-delay: 3s;
-    animation-duration: 6s;
-    color: #ccc;
-}
-
-.third-text {
-    transform: rotate(-90deg);
-    font-size: 2rem;
-    position: absolute;
-    left: 45%;
-    top: 45%;
-    opacity: 0;
-    animation-name: topFadeOutVertical;
-    animation-delay: 7.5s;
-    animation-duration: 6s;
-    color: #A3DDF0;
-    white-space: nowrap;
-}
-
-.fourth-text {
-    font-size: 3.4rem;
-    position: absolute;
-    top: 10.5rem;
-    left: 10%;
-    opacity: 0;
-    color: #F0A3BE;
-    animation-name: fadeInOut;
-    animation-delay: 8.5s;
-    animation-duration: 9s;
-}
-
-.fifth-text {
-    font-size: 5rem;
-    position: absolute;
-    left: 5%;
-    bottom: 25%;
-    opacity: 0;
-    color: #F0EBA3;
-    animation-name: bottomFadeOut;
-    animation-delay: 10s;
-    animation-duration: 9s;
 }
