--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,19 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Monoton');
 
-.custom-banner-body {
-  width: 100%;
-  height: 100%;
-  margin-right:20% !important;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Monoton", Helvetica, sans-serif;
-  background: transparent;
-  letter-spacing: 4px;
+.navbar-menu {
+    align-items: center !important;
+	background-color: rgba(0, 0, 0, .4);
+	-webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);  
+    position: sticky;
 }
 
-.custom-content {
-  align-items: center;
+.custom-banner-body {
+    width: 100%;
+    height: 100%;
+    margin-right:20% !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Monoton", Helvetica, sans-serif;
+    background: transparent;
+    letter-spacing: 4px;
+}
+
+#footer {
+    padding-top: 0 !important;
+}
+
+#banner.content {
+    padding-bottom: 0em !important;
 }
 
 @supports (-webkit-background-clip: text) {
@@ -25,54 +37,26 @@
 	}
 }
 
-/* div.content {
-    background:rgba(28, 49, 58, 0.3);
-} */
+.circular--portrait {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+  
+.circular--portrait Img {
+    width: 100%;
+    height: auto;
+}
 
 #header {
     background: url("../images/black-frost-ripples-1280.jpg") !important;
     background-size: cover !important;
     opacity: 1;
+    position: relative !important;
     z-index: 101;
-}
-
-div.speed-1 p.speed-1 {
-    margin-right:10rem !important;
-    display: inline-block;
-    font-family: 'Montserrat';
-    font-size: 30px;
-    color: white;
-    text-transform: none;
-    margin: 0 20px;
-    opacity: 1.0;
-    animation: fadeIn ease 2s;
-    -webkit-animation: fadeIn ease 2s;
-}
-
-div.speed-2 p.speed-2 {
-    margin-right:10rem !important;
-    display: inline-block;
-    font-family: 'Montserrat';
-    font-size: 26px;
-    color: white;
-    text-transform: none;
-    margin: 0 20px;
-    opacity: 1.0;
-    animation: fadeIn ease 3s;
-    -webkit-animation: fadeIn ease 3s;
-}
-
-div.speed-3 p.speed-3 {
-    margin-right:10rem !important;
-    display: inline-block;
-    font-family: 'Montserrat';
-    font-size: 22px;
-    color: white;
-    text-transform: none;
-    margin: 0 20px;
-    opacity: 1.0;
-    animation: fadeIn ease 5s;
-    -webkit-animation: fadeIn ease 5s;
+    align-content: center !important;
 }
 
 @keyframes fadeIn {
@@ -99,3 +83,96 @@ div.speed-3 p.speed-3 {
     0% {opacity:0;}
     100% {opacity:1;}
 }
+
+.image-animation {
+    width: 200px !important;
+    height: 200px !important;
+    text-shadow: 0 0 2px white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 0 150px inset, 0 0 5px grey;
+    transition: box-shadow 1s;
+    margin: 10px;
+    margin-left: 95px;
+}
+  
+.image-animation::after {
+    width: 80%;
+    height: 80%;
+    display: block;
+    white-space: pre;
+    font: 15pt 'Monoton';
+    color: white;
+    border: 2px solid;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 1s .5s;
+}
+  
+.image-animation:hover {
+    box-shadow: 0 0 0 5px inset, 0 0 5px grey, 0 0 10px grey inset;
+    transition: box-shadow 1s;
+}
+
+.image-animation:hover::after {
+    opacity: 0;
+    transition: opacity .5s;
+}
+
+#angular {
+    background-image: url('../../assets/images/angular-icon.png');
+    color: rgba(221, 86, 63, .9);
+  }
+  
+#angular::after {
+    content: 'Angular';
+}
+
+#spring-boot {
+    background-image: url('../../assets/images/springboot-icon.png');
+    color: rgba(84, 212, 52, 0.9);
+}
+
+#spring-boot::after {
+    content: 'Spring Boot'
+}
+
+#asp-net {
+    background-image: url('../../assets/images/asp.net-icon.png');
+    color: rgba(91, 34, 138, 0.9);
+}
+
+#asp-net::after {
+    content: 'C# ASP.NET'
+}
+
+#sql {
+    background-image: url('../../assets/images/mysql-icon.png');
+    color: rgba(250, 151, 71, 0.9);
+}
+
+#sql::after {
+    content: 'SQL & MongoDB'
+}
+
+#javascript {
+    background-image: url('../../assets/images/javascript-logo.png');
+    color: rgba(250, 232, 71, 0.9);
+}
+
+#javascript::after {
+    content: 'Javascript'
+}
+
+#react {
+    background-image: url('../../assets/images/react-icon.png');
+    color: rgba(69, 174, 235, 0.9);
+}
+
+#react::after {
+    content: 'React & Gatsby'
+}
+
