--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -53,7 +53,8 @@
 	color: white;
     width: 300px;
 	height: 250px;
-	padding: 2rem;
+    padding: 2rem;
+    padding-bottom: 5rem;
 	&:before,
 	&:after {
 		content: "";
