--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -137,7 +137,6 @@ input, select, textarea {
 		color: #ffffff;
 		font-weight: 300;
 		line-height: 1em;
-		margin: 0 0 1em 0;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -190,7 +189,7 @@ input, select, textarea {
 	}
 
 		hr.major {
-			margin: 2em 0;
+			margin: 0.5em 0;
 		}
 
 	blockquote {
@@ -2175,12 +2174,12 @@ input, select, textarea {
 	header h5 + p,
 	header h6 + p {
 		font-size: 0.9em;
-		margin-top: -0.6em;
+		margin-top: -1.6em;
 		line-height: 1.5em;
 	}
 
 	header.major {
-		margin: 0 0 4em 0;
+		margin: 0 0 0.5em 0;
 		position: relative;
 		text-align: center;
 	}
@@ -2195,7 +2194,7 @@ input, select, textarea {
 		}
 
 	footer.major {
-		margin: 4em 0 0 0;
+		margin: 0.5em 0 0 0;
 	}
 
 /* Form */
@@ -2934,6 +2933,8 @@ input, select, textarea {
 /* Goto Next */
 
 	.goto-next {
+		text-align: center;
+		font-size: 2em;
 		border: 0;
 		bottom: 0;
 		display: block;
@@ -2949,18 +2950,18 @@ input, select, textarea {
 	}
 
 		.goto-next:before {
-			background-image: url("images/arrow.svg");
+			background-image: url("../../images/black-arrow.png");
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: contain;
 			content: '';
 			display: block;
-			height: 1.5em;
+			height: 2.5em;
 			left: 50%;
 			margin: -0.75em 0 0 -1em;
 			position: absolute;
 			top: 50%;
-			width: 2em;
+			width: 2.5em;
 			z-index: 1;
 		}
 
@@ -3085,7 +3086,7 @@ input, select, textarea {
 			transition: transform 1s ease, opacity 1s ease;
 			background: rgba(23, 24, 32, 0.95);
 			border-style: solid;
-			opacity: 1;
+			opacity: 0.5 !important;
 			position: absolute;
 		}
 
@@ -3123,7 +3124,7 @@ input, select, textarea {
 
 		.spotlight.left .content, .spotlight.right .content {
 			height: 101%;
-			padding: 6em 3em;
+			padding: 3em 2em;
 			top: 0;
 			width: 28em;
 		}
@@ -3532,7 +3533,7 @@ input, select, textarea {
 
 	#footer {
 		background: #272833;
-		padding: 2em 0;
+		padding: 0em 0;
 		text-align: center;
 		padding-top: 0 !important;
 		padding-bottom: 0 !important;
@@ -3564,7 +3565,7 @@ input, select, textarea {
 			color: rgba(255, 255, 255, 0.5);
 			font-size: 0.8em;
 			line-height: 1em;
-			margin: 2em 0 0 0;
+			margin: 0.5em 0 0 0;
 			padding: 0;
 			text-align: center;
 		}
@@ -3645,7 +3646,7 @@ input, select, textarea {
 		/* Footer */
 
 			#footer {
-				padding: 2em 0;
+				padding: 0.5em 0;
 			}
 
 	}
@@ -3685,7 +3686,8 @@ input, select, textarea {
 					right: auto !important;
 					text-align: center;
 					top: auto !important;
-					width: 100% !important;
+					width: 70% !important;
+					opacity: 0.25 !important;
 				}
 
 					.spotlight .content ul.actions {
@@ -3739,7 +3741,7 @@ input, select, textarea {
 		/* Footer */
 
 			#footer {
-				padding: 2em 0;
+				padding: 0.5em 0;
 			}
 
 	}
@@ -3795,7 +3797,7 @@ input, select, textarea {
 			}
 
 			header.major {
-				margin: 0 0 1em 0;
+				margin: 0 0 0.5em 0;
 			}
 
 		/* Goto Next */
@@ -4042,7 +4044,7 @@ input, select, textarea {
 		/* Footer */
 
 			#footer {
-				padding: 3.25em 1.5em;
+				padding: 1em 0.5em;
 			}
 
 	}
@@ -4095,7 +4097,7 @@ input, select, textarea {
 		/* Footer */
 
 			#footer {
-				padding: 2em 1.25em;
+				padding: 1em 0.5em;
 			}
 
 				#footer .copyright {
