--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -19,6 +19,22 @@
     }
   }
 
+  .custom-banner-2 {
+    display: inline-block;
+    font-size: 3vw !important;
+    text-transform: uppercase;
+    color: #f0f34a;
+    align-content: center !important;
+    
+    @media (min-width: 350px) {
+      font-size: 9vw;
+    }
+    
+    @media (max-width: 1500px) {
+      font-size: 80px;
+    }
+  }
+
 .luminence {
     background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, #29b6f6, transparent, transparent);
     -webkit-background-clip: text;
@@ -41,6 +57,29 @@
       }
     }
 }  
+
+.luminence-2 {
+    background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, #29b6f6, transparent, transparent);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: reveal 1500ms ease-in backwards 1500ms, glow 5000ms linear infinite 3000ms;
+    position: relative;
+  
+    @keyframes reveal {
+      80%{
+        letter-spacing: 4px;
+      }
+      100% {
+        background-size: 300% 300%;
+      }
+    }
+    @keyframes glow {
+      40% {
+        text-shadow: 0 0 2px #24fc53;
+      }
+    }
+} 
 
 .heading-frame {
     display: grid;
@@ -264,6 +303,78 @@
                 transition-delay: 0.1s + 0.05s * $i;
                 }
             }
+        }
+    }
+}
+
+.flip-card {
+    margin: 0;
+    padding: 0;
+    font-family: 'Josefin Sans', sans-serif;
+    background-color: #000000;
+    a {
+        color: #ffffff;
+        text-decoration: none;
+    }
+    position: absolute;
+    top: 50%;
+    height: 200px;
+    width: 150px;
+    transform: translate(-50%, -50%);
+    transform-style: preserve-3d;
+    perspective: 600px;
+    transition: .5s;
+    &:hover .flip-card-front {
+        transform: rotateX(-180deg);
+    }
+
+    &:hover .flip-card-back {
+        transform: rotateX(0deg);
+    }
+}
+
+.flip-card-front {
+    height: 100%;
+    width: 100%;
+    background-image: url('../images/Portfolio-Profile-Pic.jpg');
+    background-position: 50% 50%;
+    background-size: cover;
+    position: absolute;
+    background-color: #000000;
+    backface-visibility: hidden;
+    transform: rotateX(0deg);
+    transition: .5s;
+}
+
+.flip-card-back {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    font-family: 'Josefin Sans', sans-serif;
+    backface-visibility: hidden;
+    transform: rotateX(180deg);
+    transition: .5s;
+    color: #000000;
+    text-align: center;
+    h2 {
+        margin: 60% auto 35% auto;
+        font-size: 26px;
+
+        span {
+            font-size: 20px;
+        }
+    }
+    a {
+        height: 20px;
+        width: 20px;
+        padding: 5px 5px;
+        border-radius: 4px;
+        line-height: 20px;
+        color: #ffffff;
+        text-decoration: none;
+        &:hover {
+            color: #000000;
+            background-color: #fff;
         }
     }
 }
