--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2956,12 +2956,12 @@ input, select, textarea {
 			background-size: contain;
 			content: '';
 			display: block;
-			height: 2.5em;
+			height: 3.5em;
 			left: 50%;
 			margin: -0.75em 0 0 -1em;
 			position: absolute;
 			top: 50%;
-			width: 2.5em;
+			width: 3.5em;
 			z-index: 1;
 		}
 
@@ -3397,7 +3397,7 @@ input, select, textarea {
 
 		#header nav {
 			position: absolute;
-			right: 1em;
+			right: 50%;
 			top: 0;
 		}
 
@@ -3885,21 +3885,21 @@ input, select, textarea {
 				transition: transform 0.5s ease;
 				display: block;
 				height: 44px;
-				left: 0;
+				left: 50%;
 				position: fixed;
 				top: 0;
 				width: 100%;
 				z-index: 10001;
 				background: #272833;
-				box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
+				box-shadow: 0 0.5em 0.5em 0 rgba(0, 0, 0, 0.125);
 			}
 
 				#titleBar .title {
 					color: #ffffff;
 					display: block;
-					font-weight: 300;
-					height: 44px;
-					line-height: 44px;
+					font-weight: 350;
+					height: 50px;
+					line-height: 50px;
 					text-align: center;
 				}
 
@@ -3911,7 +3911,7 @@ input, select, textarea {
 				#titleBar .toggle {
 					text-decoration: none;
 					height: 60px;
-					left: 0;
+					left: 50%;
 					position: absolute;
 					top: 0;
 					width: 90px;
@@ -3937,10 +3937,10 @@ input, select, textarea {
 						color: rgba(255, 255, 255, 0.5);
 						content: '\f0c9';
 						display: block;
-						font-size: 18px;
-						height: 44px;
-						left: 0;
-						line-height: 44px;
+						font-size: 20px;
+						height: 50px;
+						left: 50%;
+						line-height: 50px;
 						position: absolute;
 						text-align: center;
 						top: 0;
