--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -19,7 +19,7 @@
     }
   }
 
-  .custom-banner-2 {
+  .custom-animated-header {
     display: inline-block;
     font-size: 3vw !important;
     text-transform: uppercase;
@@ -58,7 +58,7 @@
     }
 }  
 
-.luminence-2 {
+.header-luminence{
     background: 50% 100% / 50% 50% no-repeat radial-gradient(ellipse at bottom, #29b6f6, transparent, transparent);
     -webkit-background-clip: text;
     background-clip: text;
@@ -82,16 +82,17 @@
 } 
 
 .heading-frame {
+    z-index: 1;
+    width: 215px;
+    height: 285px;
     display: grid;
 	place-items: center;
 	box-shadow: 0 3px 6px rgba(0,0,0,0.9);
 	grid-template-columns: max-content auto;
 	grid-template-rows: auto max-content;
-	background: #333 url('.././images/hnet.com-image.ico') center;
+	background: #333 url('.././images/profile-pic-portfolio.jpg') center;
 	background-size: cover;
 	color: white;
-    width: 300px;
-	height: 250px;
     padding: 2rem;
 	&:before,
 	&:after {
@@ -116,6 +117,46 @@
 		font-size: 2rem;
 		max-width: 100%;
 	}
+}
+
+.profile-pic {
+    z-index: 10;
+    width: 215px;
+    height: 285px;
+    position: relative;
+    right: -11.5em;
+    top: -1em;
+    margin-left:-7em;
+    margin-right:18em;
+    box-shadow:
+        0 2.8px 2.2px rgba(68, 68, 68, 0.072),
+        0 6.7px 5.3px rgba(68, 68, 68, 0.092),
+        0 12.5px 10px rgba(68, 68, 68, 0.122);
+        // 0 22.3px 17.9px rgba(68, 68, 68, 0.152),
+        // 0 41.8px 33.4px rgba(68, 68, 68, 0.202),
+        // 0 100px 80px rgba(68, 68, 68, 0.252);
+    border-radius: 1px;
+}
+
+.tilted-image {
+    -webkit-box-shadow: 0 35px 20px #777;
+    -moz-box-shadow: 0 35px 20px #777;
+    box-shadow: 0 35px 20px #777;
+    -webkit-transform: rotate(-8deg);
+    -moz-transform: rotate(-8deg);
+    -o-transform: rotate(-8deg);
+    -ms-transform: rotate(-8deg);
+    transform: rotate(-8deg);
+}
+
+.tilted-image:after {
+    -webkit-transform: rotate(8deg);
+    -moz-transform: rotate(8deg);
+    -o-transform: rotate(8deg);
+    -ms-transform: rotate(8deg);
+    transform: rotate(8deg);
+    right: 10px;
+    left: auto;
 }
   
 .animation-box {
